third_party/move/move-compiler-v2/tests/unit_test/test/other_failures_invalid_location.exp

Diagnostics:
error: Expected `location` following `vector_error`
  ┌─ tests/unit_test/test/other_failures_invalid_location.move:6:24
  │
6 │     #[expected_failure(vector_error)]
  │                        ^^^^^^^^^^^^

error: Expected `location` following `arithmetic_error`
   ┌─ tests/unit_test/test/other_failures_invalid_location.move:10:24
   │
10 │     #[expected_failure(arithmetic_error)]
   │                        ^^^^^^^^^^^^^^^^

error: Expected `location` following `out_of_gas`
   ┌─ tests/unit_test/test/other_failures_invalid_location.move:14:24
   │
14 │     #[expected_failure(out_of_gas)]
   │                        ^^^^^^^^^^

error: Expected `location` following `major_status`
   ┌─ tests/unit_test/test/other_failures_invalid_location.move:18:24
   │
18 │     #[expected_failure(major_status=4004)]
   │                        ^^^^^^^^^^^^^^^^^

error: Expected `location` following `major_status`
   ┌─ tests/unit_test/test/other_failures_invalid_location.move:22:24
   │
22 │     #[expected_failure(major_status=4016, minor_code=0)]
   │                        ^^^^^^^^^^^^^^^^^

error: invalid attribute value
   ┌─ tests/unit_test/test/other_failures_invalid_location.move:38:59
   │
38 │     #[expected_failure(major_status=4016, minor_status=0, location=0)]
   │                                                           ^^^^^^^^^^
   │                                                                    │
   │                                                                    Expected a module identifier, e.g. 'std::vector'
